2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp|h: Abort all http requests before setting the is_shutting_down
	flag, since aborting will raise important events (possibly reaching managed
	code), and when is_shutting_down is true events are blocked. Use another flag
	(is_network_stopped) to prevent new requests from being created while aborting
	current requests.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ffmpeg.cpp: FfmpegDemuxer::Read: break out of the waiting loop
	when we're shutting down.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp: Implement parsing of int values for enums. Fixes #611465 and
	part 1 of #595476.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp: Reverse yes/no condition for ffmpeg-codecs, since it's a
	negative flag.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: CurlDownloaderResponse::Finished: we didn't succeed if we
	were aborted.

2010-06-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp|h: Clean up statusText properly, and ensure to call
	SetStatus on the HttpResponse so that policies know we succeeded.

2010-06-14  Chris Toshok  <toshok@ximian.com>

	* capture.cpp: comment out spew.

	* pal/pal.h: use enums for everything.  allow us to specify yes/no
	buttons for message dialogs (but not managed code), and allow
	us (and again not managed code) to change the message box type.

	* pal/gtk/pal-gtk.h,cpp: track new messagebox api.

	* pal/capture/pal-linux-capture.cpp (MoonCaptureServiceLinux::RequestSystemAccess):
	pop up a message box using the windowing service to request
	permission.

	* pal/capture/v4l2/pal-v4l2-video-capture.cpp: comment out spew.

2010-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* richtextbox.h (TextPointer): Stubbed out.

	* enums.cpp: Added mapping for LogicalDirection

2010-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* richtextbox.cpp|h: stubbed out a ton of stuff.
